--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
         <div class="a border">
             <div class="a1 border">
-                <div class="a1-1 border">
+                <div class="gmail border">
                     <a href="https://mail.google.com/mail/?tab=rm&authuser=0&ogbl">Gmail</a>
                 </div>
-                <div class="a1-2 border">
+                <div class="images border">
                     <a href="https://www.google.fr/imghp?hl=en&tab=ri&authuser=0&ogbl">Images</a>
                 </div>
-                <div class="a1-3 border">
+                <div class="outils border">
                     <a href="https://www.google.fr/intl/en/about/products?tab=rh"><i class="fas fa-th"></i></a>
                 </div>
-                <div class="a1-4 border">
+                <div class="connexion border">
                     <a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com%3Fhl%3Den-US">Connextion</a>
                 </div>
             </div>
@@ -31,20 +31,21 @@
 
         <div class="b border">
             <div class="b1 border">
-              <div class="b1-1 border">
+              <div class="logo border">
                   <img src="http://jihane.fr/dwmg13/google.png" alt="logo google">
               </div>
-              <div class="b1-2 border">
-                    <!--<i class="fas fa-search"></i>-->
-        <form role="search">
-            <div class="borderRadius"><i class="fas fa-search"></i>
-               <input type="search" id="maRecherche" name="q"
-               placeholder="Rechercher sur le site…"
-               aria-label="Rechercher parmi le contenu du site">
-            </div>
-        </form>
+              <div class="recherche border">
+                              <!--<i class="fas fa-search"></i>-->
+                  <form role="search">
+                      <div class="borderRadius"><i class="fas fa-search"></i>
+                         <input type="search" id="maRecherche" name="q"
+                         placeholder="Recherche"
+                         aria-label="Rechercher parmi le contenu du site" class="style">
+
+                      </div>
+                  </form>
               </div>
-              <div class="b1-3 border">
+              <div class="boutons border">
                   <div class="">
                     <button>recherche google</button>
                   </div>
@@ -57,7 +58,7 @@
 
 
         <div class="c border">
-            <div class="c1 border">
+            <div class="france border">
                 <p>France</p>
             </div>
         </div>
@@ -65,30 +66,30 @@
 
         <div class="d border">
             <div class="d1 border">
-                <div class="d1-1 border">
+                <div class="pub border">
                     <a href="https://www.google.fr/intl/fr_fr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a>
                 </div>
-                <div class="d1-2 border">
+                <div class="entreprise border">
                     <a href="https://www.google.fr/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a>
                 </div>
-                <div class="d1-3 border">
+                <div class="aPropos border">
                     <a href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1">à propos</a>
                 </div>
-                <div class="d1-4 border">
+                <div class="fonctionne border">
                     <a href="https://google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
                 </div>
             </div>
             <div class="d2 border">
-                <div class="d2-1 border">
+                <div class="info border">
                     <a href="https://support.google.com/websearch?p=fr_consumer_info&hl=fr&fg=1">Info consommateurs</a>
                 </div>
-                <div class="d2-2 border">
+                <div class="confidentialite border">
                     <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
                 </div>
-                <div class="d2-3 border">
+                <div class="conditions border">
                     <a href="https://policies.google.com/terms?fg=1">Conditions</a>
                 </div>
-                <div class="d2-4 border">
+                <div class="parametre border">
                     <a href="https://www.google.fr/preferences?hl=fr">paramètres</a>
                 </div>
             </div>
