add google logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="b border">
             <div class="b1 border">
               <div class="logo border">
-                  <img src="http://jihane.fr/dwmg13/google.png" alt="logo google">
+                  <img src="https://www.google.fr/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="logo google">
               </div>
               <div class="recherche border">
                               <!--<i class="fas fa-search"></i>-->
